set(SAMPLE_APPLICATION_SOURCE qtquick2applicationviewer.cpp)

set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_library(sample_QtQuick2 OBJECT ${SAMPLE_APPLICATION_SOURCE})

set_property(TARGET sample_QtQuick2 APPEND PROPERTY INCLUDE_DIRECTORIES "${Qt5Core_INCLUDE_DIRS}")
set_property(TARGET sample_QtQuick2 APPEND PROPERTY INCLUDE_DIRECTORIES "${Qt5Gui_INCLUDE_DIRS}")
set_property(TARGET sample_QtQuick2 APPEND PROPERTY INCLUDE_DIRECTORIES "${Qt5Widgets_INCLUDE_DIRS}")
set_property(TARGET sample_QtQuick2 APPEND PROPERTY INCLUDE_DIRECTORIES "${Qt5Qml_INCLUDE_DIRS}")
set_property(TARGET sample_QtQuick2 APPEND PROPERTY INCLUDE_DIRECTORIES "${Qt5Quick_INCLUDE_DIRS}")

